Update Intel logo and enhance layout for bubble banner and timeline sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="page">
       <section class="bubble-banner" aria-label="Intel thought bubble banner">
         <div class="thought-bubble">
-          <div class="intel-logo" aria-hidden="true">intel</div>
+          <img class="intel-logo" src="img/intel-header-logo.svg" alt="Intel logo" />
           <div class="banner-text">
             <p class="banner-kicker">Placeholder Banner</p>
             <h1>Placeholder Heading</h1>
