Refactor HTML structure and enhance CSS for timeline and card components

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="page">
       <section class="bubble-banner" aria-label="Intel thought bubble banner">
         <div class="thought-bubble">
-          <img class="intel-logo" src="img/intel-header-logo.svg" alt="Intel logo" />
+          <img src="img/intel-header-logo.svg" alt="Intel logo">
           <div class="banner-text">
             <p class="banner-kicker">Placeholder Banner</p>
             <h1>Placeholder Heading</h1>
@@ -40,46 +40,55 @@
           <div class="timeline-track">
             <article class="card">
               <h3>Placeholder Heading 01</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 02</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 03</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 04</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 05</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 06</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 07</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 08</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
             <article class="card">
               <h3>Placeholder Heading 09</h3>
+              <h4>Placeholder Subheading</h4>
               <div class="card-photo">Placeholder Photo</div>
               <p>Placeholder body for timeline card content.</p>
             </article>
