--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
         <div class="thought-bubble">
           <img src="img/intel-header-logo.svg" alt="Intel logo">
           <div class="banner-text">
-            <p class="banner-kicker">Placeholder Banner</p>
-            <h1>Placeholder Heading</h1>
+            <p class="banner-kicker">Sustainability Through the Ages</p>
             <p class="banner-body">
-              Placeholder body copy for the Intel thought bubble banner.
+              Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology and our planet.
             </p>
           </div>
         </div>
@@ -39,58 +38,58 @@
         <div class="timeline-viewport">
           <div class="timeline-track">
             <article class="card">
-              <h3>Placeholder Heading 01</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>1968</h3>
+              <h4>Intel founded</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 02</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>1971</h3>
+              <h4>First Microprocessor</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel debuts the 4004, the world's first commercial microprocessor.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 03</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>1978</h3>
+              <h4>8086 Processor</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Launch of the 8086 processor, establishing the x86 architecture.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 04</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>1985</h3>
+              <h4>386 Processor</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel introduces the 386 processor with 32-bit architecture..</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 05</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>2006</h3>
+              <h4>Peak GHG Emissions</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel reaches peak greenhouse gas emissions for operations.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 06</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>2020</h3>
+              <h4>Rise Strategy</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel launches its RISE strategy and 2030 goals.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 07</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>2022</h3>
+              <h4>Net-Zero by 2040</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel commits to net-zero greenhouse gas emissions by 2040.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 08</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>2023</h3>
+              <h4>Renewable Electricity</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel achieves 99% renewable electricity usage worldwide.</p>
             </article>
             <article class="card">
-              <h3>Placeholder Heading 09</h3>
-              <h4>Placeholder Subheading</h4>
+              <h3>2024</h3>
+              <h4>Sustainability Summit</h4>
               <div class="card-photo">Placeholder Photo</div>
-              <p>Placeholder body for timeline card content.</p>
+              <p>Intel hosts its first Sustainability Summit.</p>
             </article>
           </div>
         </div>
