Add navigation links and enhance layout for side navigation and bubble banner

--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
     </button>
 
     <main class="page">
+      <nav class="side-nav" aria-label="Intel navigation">
+        <h2>Navigate Intel</h2>
+        <ul>
+          <li><a href="https://www.intel.com/content/www/us/en/products/overview.html" target="_blank" rel="noreferrer">Products</a></li>
+          <li><a href="https://www.intel.com/content/www/us/en/support.html" target="_blank" rel="noreferrer">Support</a></li>
+          <li><a href="https://www.intel.com/content/www/us/en/solutions/overview.html" target="_blank" rel="noreferrer">Solutions</a></li>
+          <li><a href="https://www.intel.com/content/www/us/en/developer/overview.html" target="_blank" rel="noreferrer">Developers</a></li>
+          <li><a href="https://www.intel.com/content/www/us/en/partner-alliance/overview.html" target="_blank" rel="noreferrer">Partners</a></li>
+          <li><a href="https://www.intel.com/content/www/us/en/foundry/overview.html" target="_blank" rel="noreferrer">Foundry</a></li>
+        </ul>
+      </nav>
+
       <section class="bubble-banner" aria-label="Intel thought bubble banner">
         <div class="thought-bubble">
-          <img src="img/intel-header-logo.svg" alt="Intel logo">
+          <img class="intel-logo" src="img/intel-header-logo.svg" alt="Intel logo">
           <div class="banner-text">
             <p class="banner-kicker">Sustainability Through the Ages</p>
             <p class="banner-body">
@@ -40,77 +52,91 @@
             <article class="card">
               <h3>1968</h3>
               <h4>Intel founded</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?auto=format&fit=crop&w=700&q=80" alt="Vintage notebook and pen on a desk">
               <p>Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation.</p>
             </article>
             <article class="card">
               <h3>1971</h3>
               <h4>First Microprocessor</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=700&q=80" alt="Close-up of a microchip on a circuit board">
               <p>Intel debuts the 4004, the world's first commercial microprocessor.</p>
             </article>
             <article class="card">
               <h3>1978</h3>
               <h4>8086 Processor</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?auto=format&fit=crop&w=700&q=80" alt="Macro view of computer circuitry">
               <p>Launch of the 8086 processor, establishing the x86 architecture.</p>
             </article>
             <article class="card">
               <h3>1985</h3>
               <h4>386 Processor</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=700&q=80" alt="Engineer working with electronics on a workbench">
               <p>Intel introduces the 386 processor with 32-bit architecture..</p>
             </article>
             <article class="card">
               <h3>2006</h3>
               <h4>Peak GHG Emissions</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=700&q=80" alt="Industrial smokestacks releasing emissions at dusk">
               <p>Intel reaches peak greenhouse gas emissions for operations.</p>
             </article>
             <article class="card">
               <h3>2020</h3>
               <h4>Rise Strategy</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=700&q=80" alt="Modern workspace with a laptop and code on screen">
               <p>Intel launches its RISE strategy and 2030 goals.</p>
             </article>
             <article class="card">
               <h3>2022</h3>
               <h4>Net-Zero by 2040</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=700&q=80" alt="Sunlit forest canopy with green leaves">
               <p>Intel commits to net-zero greenhouse gas emissions by 2040.</p>
             </article>
             <article class="card">
               <h3>2023</h3>
               <h4>Renewable Electricity</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1509391366360-2e959784a276?auto=format&fit=crop&w=700&q=80" alt="Wind turbines generating clean energy">
               <p>Intel achieves 99% renewable electricity usage worldwide.</p>
             </article>
             <article class="card">
               <h3>2024</h3>
               <h4>Sustainability Summit</h4>
-              <div class="card-photo">Placeholder Photo</div>
+              <img class="card-photo" src="https://images.unsplash.com/photo-1515169067865-5387ec356754?auto=format&fit=crop&w=700&q=80" alt="Conference audience listening to a speaker">
               <p>Intel hosts its first Sustainability Summit.</p>
             </article>
           </div>
         </div>
       </section>
-
-      <nav class="side-nav" aria-label="Intel navigation">
-        <h2>Navigate Intel</h2>
-        <ul>
-          <li><a href="https://www.intel.com/content/www/us/en/products/overview.html" target="_blank" rel="noreferrer">Products</a></li>
-          <li><a href="https://www.intel.com/content/www/us/en/support.html" target="_blank" rel="noreferrer">Support</a></li>
-          <li><a href="https://www.intel.com/content/www/us/en/solutions/overview.html" target="_blank" rel="noreferrer">Solutions</a></li>
-          <li><a href="https://www.intel.com/content/www/us/en/developer/overview.html" target="_blank" rel="noreferrer">Developers</a></li>
-          <li><a href="https://www.intel.com/content/www/us/en/partner-alliance/overview.html" target="_blank" rel="noreferrer">Partners</a></li>
-          <li><a href="https://www.intel.com/content/www/us/en/foundry/overview.html" target="_blank" rel="noreferrer">Foundry</a></li>
-        </ul>
-      </nav>
     </main>
 
     <footer class="footer-note">
       menu auto scrolls. hover to pause or scroll to explore.
     </footer>
+
+    <section class="credit" aria-label="Timeline credits">
+      <p class="credit-text">Timeline was created by Amber Vilord. GCE Student at Mizzou.</p>
+      <div class="credit-links" aria-label="Contact links">
+        <a class="credit-link" href="https://www.facebook.com/amber.dawdy.75/" target="_blank" rel="noreferrer" aria-label="Facebook">
+          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+            <path d="M14 8h3V5h-3c-2.2 0-4 1.8-4 4v2H7v3h3v5h3v-5h3l1-3h-4V9c0-.6.4-1 1-1Z"></path>
+          </svg>
+        </a>
+        <a class="credit-link" href="https://ambervilord.github.io/my-site/" target="_blank" rel="noreferrer" aria-label="Website">
+          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+            <path d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9Zm6.9 8h-2.4a13 13 0 0 0-1.1-4.1A7.1 7.1 0 0 1 18.9 11Zm-6.9-6c.9 1.3 1.6 3.1 1.8 6H10.2c.2-2.9.9-4.7 1.8-6ZM5.1 13h2.4a13 13 0 0 0 1.1 4.1A7.1 7.1 0 0 1 5.1 13Zm2.4-2H5.1a7.1 7.1 0 0 1 3.5-4.1A13 13 0 0 0 7.5 11Zm4.5 8c-.9-1.3-1.6-3.1-1.8-6h3.6c-.2 2.9-.9 4.7-1.8 6Zm3.9-1.9a13 13 0 0 0 1.1-4.1h2.4a7.1 7.1 0 0 1-3.5 4.1Z"></path>
+          </svg>
+        </a>
+        <a class="credit-link" href="https://www.linkedin.com/in/ambervilord/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+            <path d="M6.9 7.5a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0ZM5 10h2.7v9H5Zm6 0h2.6v1.2a3 3 0 0 1 2.6-1.4c2.6 0 3.1 1.7 3.1 4v5.2h-2.7v-4.6c0-1.1 0-2.5-1.6-2.5s-1.9 1.2-1.9 2.4v4.7H11Z"></path>
+          </svg>
+        </a>
+        <a class="credit-link" href="mailto:MrsVilord@gmail.com" aria-label="Email">
+          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+            <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Zm0 2v.2l8 4.9 8-4.9V8H4Zm16 8v-5.6l-7.4 4.5a1 1 0 0 1-1.2 0L4 10.4V16h16Z"></path>
+          </svg>
+        </a>
+      </div>
+    </section>
 
     <script>
       const toggleButton = document.querySelector(".theme-toggle");
