Update bubble banner logo to text and enhance styling for improved visibility

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <section class="bubble-banner" aria-label="Intel thought bubble banner">
         <div class="thought-bubble">
-          <img class="intel-logo" src="img/intel-header-logo.svg" alt="Intel logo">
+          <div class="intel-logo" aria-label="Intel">Intel</div>
           <div class="banner-text">
             <p class="banner-kicker">Sustainability Through the Ages</p>
             <p class="banner-body">
@@ -109,7 +109,7 @@
     </main>
 
     <footer class="footer-note">
-      menu auto scrolls. hover to pause or scroll to explore.
+      Menu auto scrolls. Hover to pause or scroll to explore.
     </footer>
 
     <section class="credit" aria-label="Timeline credits">
