Update historical images and adjust theme icon visibility for improved user experience

--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
             <article class="card">
               <h3>1968</h3>
               <h4>Intel founded</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?auto=format&fit=crop&w=700&q=80" alt="Vintage notebook and pen on a desk">
+              <img class="card-photo" src="https://c1.staticflickr.com/9/8222/8429166752_b081ece60c_z.jpg" alt="Intel founders portrait photo">
               <p>Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation.</p>
             </article>
             <article class="card">
               <h3>1971</h3>
               <h4>First Microprocessor</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=700&q=80" alt="Close-up of a microchip on a circuit board">
+              <img class="card-photo" src="https://s-media-cache-ak0.pinimg.com/736x/0f/45/1c/0f451cd41996791599a769fa87fbd6d2.jpg" alt="Intel 4004 microprocessor close-up">
               <p>Intel debuts the 4004, the world's first commercial microprocessor.</p>
             </article>
             <article class="card">
               <h3>1978</h3>
               <h4>8086 Processor</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?auto=format&fit=crop&w=700&q=80" alt="Macro view of computer circuitry">
+              <img class="card-photo" src="https://pbs.twimg.com/media/EaBPmMrUEAE3Kfi?format=jpg&name=4096x4096" alt="Intel 8086 processor package">
               <p>Launch of the 8086 processor, establishing the x86 architecture.</p>
             </article>
             <article class="card">
               <h3>1985</h3>
               <h4>386 Processor</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=700&q=80" alt="Engineer working with electronics on a workbench">
+              <img class="card-photo" src="https://tse4.mm.bing.net/th/id/OIP.kxWuWcyY90j-Fn2UIiXFMwHaFj?pid=Api&h=220&P=0" alt="Intel 386 processor">
               <p>Intel introduces the 386 processor with 32-bit architecture..</p>
             </article>
             <article class="card">
               <h3>2006</h3>
               <h4>Peak GHG Emissions</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=700&q=80" alt="Industrial smokestacks releasing emissions at dusk">
+              <img class="card-photo" src="https://cdn.mos.cms.futurecdn.net/D2oVfNswe85phHK9gcPXSE.jpg" alt="Industrial emissions and sustainability context">
               <p>Intel reaches peak greenhouse gas emissions for operations.</p>
             </article>
             <article class="card">
@@ -100,7 +100,7 @@
             <article class="card">
               <h3>2024</h3>
               <h4>Sustainability Summit</h4>
-              <img class="card-photo" src="https://images.unsplash.com/photo-1515169067865-5387ec356754?auto=format&fit=crop&w=700&q=80" alt="Conference audience listening to a speaker">
+              <img class="card-photo" src="https://assets.blog.siemens.com/uploads/2024/03/DSC_4147A-1-1024x534.jpg" alt="Sustainability summit stage and audience">
               <p>Intel hosts its first Sustainability Summit.</p>
             </article>
           </div>
