Refactor credit section layout and styles for improved presentation and responsiveness

--- a/index.html
+++ b/index.html
@@ -113,29 +113,32 @@
     </footer>
 
     <section class="credit" aria-label="Timeline credits">
-      <p class="credit-text">Timeline was created by Amber Vilord. GCE Student at Mizzou.</p>
-      <div class="credit-links" aria-label="Contact links">
-        <a class="credit-link" href="https://www.facebook.com/amber.dawdy.75/" target="_blank" rel="noreferrer" aria-label="Facebook">
-          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
-            <path d="M14 8h3V5h-3c-2.2 0-4 1.8-4 4v2H7v3h3v5h3v-5h3l1-3h-4V9c0-.6.4-1 1-1Z"></path>
-          </svg>
-        </a>
-        <a class="credit-link" href="https://ambervilord.github.io/my-site/" target="_blank" rel="noreferrer" aria-label="Website">
-          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
-            <path d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9Zm6.9 8h-2.4a13 13 0 0 0-1.1-4.1A7.1 7.1 0 0 1 18.9 11Zm-6.9-6c.9 1.3 1.6 3.1 1.8 6H10.2c.2-2.9.9-4.7 1.8-6ZM5.1 13h2.4a13 13 0 0 0 1.1 4.1A7.1 7.1 0 0 1 5.1 13Zm2.4-2H5.1a7.1 7.1 0 0 1 3.5-4.1A13 13 0 0 0 7.5 11Zm4.5 8c-.9-1.3-1.6-3.1-1.8-6h3.6c-.2 2.9-.9 4.7-1.8 6Zm3.9-1.9a13 13 0 0 0 1.1-4.1h2.4a7.1 7.1 0 0 1-3.5 4.1Z"></path>
-          </svg>
-        </a>
-        <a class="credit-link" href="https://www.linkedin.com/in/ambervilord/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
-          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
-            <path d="M6.9 7.5a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0ZM5 10h2.7v9H5Zm6 0h2.6v1.2a3 3 0 0 1 2.6-1.4c2.6 0 3.1 1.7 3.1 4v5.2h-2.7v-4.6c0-1.1 0-2.5-1.6-2.5s-1.9 1.2-1.9 2.4v4.7H11Z"></path>
-          </svg>
-        </a>
-        <a class="credit-link" href="mailto:MrsVilord@gmail.com" aria-label="Email">
-          <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
-            <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Zm0 2v.2l8 4.9 8-4.9V8H4Zm16 8v-5.6l-7.4 4.5a1 1 0 0 1-1.2 0L4 10.4V16h16Z"></path>
-          </svg>
-        </a>
+      <div class="credit-left">
+        <p class="credit-text">Timeline was created by Amber Vilord. GCE Student at Mizzou.</p>
+        <div class="credit-links" aria-label="Contact links">
+          <a class="credit-link" href="https://www.facebook.com/amber.dawdy.75/" target="_blank" rel="noreferrer" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path d="M14 8h3V5h-3c-2.2 0-4 1.8-4 4v2H7v3h3v5h3v-5h3l1-3h-4V9c0-.6.4-1 1-1Z"></path>
+            </svg>
+          </a>
+          <a class="credit-link" href="https://ambervilord.github.io/my-site/" target="_blank" rel="noreferrer" aria-label="Website">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9Zm6.9 8h-2.4a13 13 0 0 0-1.1-4.1A7.1 7.1 0 0 1 18.9 11Zm-6.9-6c.9 1.3 1.6 3.1 1.8 6H10.2c.2-2.9.9-4.7 1.8-6ZM5.1 13h2.4a13 13 0 0 0 1.1 4.1A7.1 7.1 0 0 1 5.1 13Zm2.4-2H5.1a7.1 7.1 0 0 1 3.5-4.1A13 13 0 0 0 7.5 11Zm4.5 8c-.9-1.3-1.6-3.1-1.8-6h3.6c-.2 2.9-.9 4.7-1.8 6Zm3.9-1.9a13 13 0 0 0 1.1-4.1h2.4a7.1 7.1 0 0 1-3.5 4.1Z"></path>
+            </svg>
+          </a>
+          <a class="credit-link" href="https://www.linkedin.com/in/ambervilord/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path d="M6.9 7.5a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0ZM5 10h2.7v9H5Zm6 0h2.6v1.2a3 3 0 0 1 2.6-1.4c2.6 0 3.1 1.7 3.1 4v5.2h-2.7v-4.6c0-1.1 0-2.5-1.6-2.5s-1.9 1.2-1.9 2.4v4.7H11Z"></path>
+            </svg>
+          </a>
+          <a class="credit-link" href="mailto:MrsVilord@gmail.com" aria-label="Email">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Zm0 2v.2l8 4.9 8-4.9V8H4Zm16 8v-5.6l-7.4 4.5a1 1 0 0 1-1.2 0L4 10.4V16h16Z"></path>
+            </svg>
+          </a>
+        </div>
       </div>
+      <p class="credit-meta">© 2026 Intel Corporation. Student sustainability project.<br>Built with HTML &amp; CSS</p>
     </section>
 
     <script>
