Refactor intro section layout and styles for improved presentation and responsiveness

--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
         </ul>
       </nav>
 
-      <section class="bubble-banner" aria-label="Intel thought bubble banner">
-        <div class="thought-bubble">
-          <div class="intel-logo" aria-label="Intel">Intel</div>
-          <div class="banner-text">
-            <p class="banner-kicker">Sustainability Through the Ages</p>
-            <p class="banner-body">
-              Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology and our planet.
-            </p>
+      <section class="intro-row" aria-label="Intel sustainability introduction">
+        <div class="bubble-banner">
+          <div class="thought-bubble">
+            <div class="intel-logo" aria-label="Intel">Intel</div>
+            <div class="banner-text">
+              <p class="banner-kicker">Sustainability Through the Ages</p>
+              <p class="banner-body">
+                Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology and our planet.
+              </p>
+            </div>
           </div>
+        </div>
+        <div class="sustainability-card" aria-label="Intel sustainability summary">
+          <p class="sustainability-heading">Building a More Responsible Future at Intel</p>
+          <p class="sustainability-body">
+            Intel's sustainability journey reflects a long-term commitment to responsible innovation and measurable environmental progress. Over the years, ambitious goals have been set and achieved to reduce greenhouse gas emissions, conserve water, minimize waste, and improve energy efficiency across its operations and products. By investing in cleaner manufacturing processes, advancing energy-efficient technologies, and working closely with suppliers to strengthen responsible sourcing, Intel continues to integrate sustainability into every stage of its business.
+          </p>
         </div>
       </section>
 
