Update Intel logo and enhance sustainability section layout for improved user experience

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
       <section class="intro-row" aria-label="Intel sustainability introduction">
         <div class="bubble-banner">
           <div class="thought-bubble">
-            <div class="intel-logo" aria-label="Intel">Intel</div>
+            <div class="intel-logo">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Intel-logo.svg"
+                alt="Intel logo"
+              />
+            </div>
+
             <div class="banner-text">
               <p class="banner-kicker">Sustainability Through the Ages</p>
               <p class="banner-body">
@@ -46,11 +52,17 @@
             </div>
           </div>
         </div>
-        <div class="sustainability-card" aria-label="Intel sustainability summary">
-          <p class="sustainability-heading">Building a More Responsible Future at Intel</p>
-          <p class="sustainability-body">
-            Intel's sustainability journey reflects a long-term commitment to responsible innovation and measurable environmental progress. Over the years, ambitious goals have been set and achieved to reduce greenhouse gas emissions, conserve water, minimize waste, and improve energy efficiency across its operations and products. By investing in cleaner manufacturing processes, advancing energy-efficient technologies, and working closely with suppliers to strengthen responsible sourcing, Intel continues to integrate sustainability into every stage of its business.
-          </p>
+
+        <div class="sustainability-stack">
+          <div class="sustainability-card" aria-label="Intel sustainability summary">
+            <p class="sustainability-heading">Building a More Responsible Future at Intel</p>
+            <p class="sustainability-body">
+              Intel's sustainability journey reflects a long-term commitment to responsible innovation and measurable environmental progress. Over the years, ambitious goals have been set and achieved to reduce greenhouse gas emissions, conserve water, minimize waste, and improve energy efficiency across its operations and products. By investing in cleaner manufacturing processes, advancing energy-efficient technologies, and working closely with suppliers to strengthen responsible sourcing, Intel continues to integrate sustainability into every stage of its business.
+            </p>
+          </div>
+          <div class="footer-note">
+            Scroll the menu and hover to learn more.
+          </div>
         </div>
       </section>
 
@@ -61,64 +73,60 @@
               <h3>1968</h3>
               <h4>Intel founded</h4>
               <img class="card-photo" src="https://c1.staticflickr.com/9/8222/8429166752_b081ece60c_z.jpg" alt="Intel founders portrait photo">
-              <p>Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation.</p>
+              <p><span class="card-text">Robert Noyce and Gordon Moore rename NM Electronics to Intel Corporation.</span></p>
             </article>
             <article class="card">
               <h3>1971</h3>
               <h4>First Microprocessor</h4>
               <img class="card-photo" src="https://s-media-cache-ak0.pinimg.com/736x/0f/45/1c/0f451cd41996791599a769fa87fbd6d2.jpg" alt="Intel 4004 microprocessor close-up">
-              <p>Intel debuts the 4004, the world's first commercial microprocessor.</p>
+              <p><span class="card-text">Intel debuts the 4004, the world's first commercial microprocessor.</span></p>
             </article>
             <article class="card">
               <h3>1978</h3>
               <h4>8086 Processor</h4>
               <img class="card-photo" src="https://pbs.twimg.com/media/EaBPmMrUEAE3Kfi?format=jpg&name=4096x4096" alt="Intel 8086 processor package">
-              <p>Launch of the 8086 processor, establishing the x86 architecture.</p>
+              <p><span class="card-text">Launch of the 8086 processor, establishing the x86 architecture.</span></p>
             </article>
             <article class="card">
               <h3>1985</h3>
               <h4>386 Processor</h4>
               <img class="card-photo" src="https://tse4.mm.bing.net/th/id/OIP.kxWuWcyY90j-Fn2UIiXFMwHaFj?pid=Api&h=220&P=0" alt="Intel 386 processor">
-              <p>Intel introduces the 386 processor with 32-bit architecture..</p>
+              <p><span class="card-text">Intel introduces the 386 processor with 32-bit architecture..</span></p>
             </article>
             <article class="card">
               <h3>2006</h3>
               <h4>Peak GHG Emissions</h4>
               <img class="card-photo" src="https://cdn.mos.cms.futurecdn.net/D2oVfNswe85phHK9gcPXSE.jpg" alt="Industrial emissions and sustainability context">
-              <p>Intel reaches peak greenhouse gas emissions for operations.</p>
+              <p><span class="card-text">Intel reaches peak greenhouse gas emissions for operations.</span></p>
             </article>
             <article class="card">
               <h3>2020</h3>
               <h4>Rise Strategy</h4>
               <img class="card-photo" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=700&q=80" alt="Modern workspace with a laptop and code on screen">
-              <p>Intel launches its RISE strategy and 2030 goals.</p>
+              <p><span class="card-text">Intel launches its RISE strategy and 2030 goals.</span></p>
             </article>
             <article class="card">
               <h3>2022</h3>
               <h4>Net-Zero by 2040</h4>
               <img class="card-photo" src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=700&q=80" alt="Sunlit forest canopy with green leaves">
-              <p>Intel commits to net-zero greenhouse gas emissions by 2040.</p>
+              <p><span class="card-text">Intel commits to net-zero greenhouse gas emissions by 2040.</span></p>
             </article>
             <article class="card">
               <h3>2023</h3>
               <h4>Renewable Electricity</h4>
               <img class="card-photo" src="https://images.unsplash.com/photo-1509391366360-2e959784a276?auto=format&fit=crop&w=700&q=80" alt="Wind turbines generating clean energy">
-              <p>Intel achieves 99% renewable electricity usage worldwide.</p>
+              <p><span class="card-text">Intel achieves 99% renewable electricity usage worldwide.</span></p>
             </article>
             <article class="card">
               <h3>2024</h3>
               <h4>Sustainability Summit</h4>
               <img class="card-photo" src="https://assets.blog.siemens.com/uploads/2024/03/DSC_4147A-1-1024x534.jpg" alt="Sustainability summit stage and audience">
-              <p>Intel hosts its first Sustainability Summit.</p>
+              <p><span class="card-text">Intel hosts its first Sustainability Summit.</span></p>
             </article>
           </div>
         </div>
       </section>
     </main>
-
-    <footer class="footer-note">
-      Menu auto scrolls. Hover to pause or scroll to explore.
-    </footer>
 
     <section class="credit" aria-label="Timeline credits">
       <div class="credit-left">
